# python-pytest-grpc-mocroservice-pact-practice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-ci.yml
docs/: agile-qa-delivery-model.md  defect-report-example.md  design-review-checklist.md  execution-summary-example.md  regression-checklist.md  test-cases.md  test-estimation.md  test-plan.md  test-strategy.md  testrail-test-cases.csv  testrail-test-runs.csv  tooling-mapping.md  traceability-matrix.md
scripts/: generate_grpc_stubs.sh  install_playwright_chromium.sh  run_docker_stack.sh  run_pytest.sh  run_pytest_non_ui.sh  stop_docker_stack.sh
src/order_app/: api.py  api_client.py  eventing.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py
tests/contracts/: test_order_api_contracts.py
tests/helpers/: inventory.py  server.py
tests/integration/: test_additional_service_types.py  test_fastapi_orders_api.py  test_fastapi_sqlite_api.py  test_sqlite_repository.py
tests/ui/: test_order_page_playwright.py
tests/unit/: test_order_service.py
